src/objects/Province_City__c.object
<CustomObject>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_ID__c</fullName>
        <label>Parent ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Province City</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ProvinceCity Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>